# molexpress

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
molexpress/: types.py
molexpress/datasets/: encoders.py  features.py  featurizers.py
molexpress/layers/: __init__.py  base_layer.py  gather_incident.py  gatv2_conv.py  gcn_conv.py  gin_conv.py  peptide_readout.py  readout.py  residue_readout.py
molexpress/ops/: chem_ops.py  gnn_ops.py
notebooks/: examples-masking.ipynb  examples.ipynb
